Version 0.6.2
* Bug fix from Scott Chamberlain around wiki_page, switching the content type over to x-wikitext.

Version 0.6.1
------------------------------------------------------------------------------

* Support for Commons and Wikispecies
* Addition of wiki_recentchanges(), which allows a useR to query the recentchanges feed.

Version 0.5.1
------------------------------------------------------------------------------

* Format for wiki_revision changed from the (unacceptable-to-API) text/css to x/wikitext.
* Error handling improved to pass the full error explanation through to the user, in the case of API errors.